I didn't fix all the abominations, but here's some more quick fixes

--- a/posts/2017-04-24.md
+++ b/posts/2017-04-24.md
@@ -91,17 +91,17 @@ The more general aggregatable types allow us to bundle all of the data we want t
 collections
     .lineitems()
     .inner
-    .flat_map(|(item, time, diff)| 
+    .flat_map(|(item, time, diff)|
         if item.ship_date < ::types::create_date(1998, 9, 1) {
-            Some(((item.return_flag, item.line_status), time, 
-                DiffPair::new(diff as i64 * item.quantity, 
+            Some(((item.return_flag, item.line_status), time,
+                DiffPair::new(diff as i64 * item.quantity,
                 DiffPair::new(diff as i64 * item.extended_price,
                 DiffPair::new(diff as i64 * item.extended_price * (100 - item.discount) / 100,
                 DiffPair::new(diff as i64 * item.extended_price * (100 - item.discount) * (100 + item.tax) / 10000,
                 DiffPair::new(diff as i64 * item.discount, diff))))))).into_iter()
         }
-        else { 
-            None.into_iter() 
+        else {
+            None.into_iter()
         }
     )
     .as_collection()
@@ -122,7 +122,7 @@ In a perfect (future) world we might write:
 ```rust
 collections
     .lineitems()
-    .flat_map(|item| 
+    .flat_map(|item|
         if item.ship_date < ::types::create_date(1998, 9, 1) {
             Some(((item.return_flag, item.line_status), // <-- data
                   (item.quantity,                       // <-- diffs
@@ -140,7 +140,7 @@ collections
 
 Brilliant. Ok, so new magical differential dataflow technology realizes we can abstract "+" and "-". Prize please!
 
-Let's run this thing and see what happens. 
+Let's run this thing and see what happens.
 
 |         | 1,000 | 10,000 | 100,000| 1,000,000 | peak rate |   hot dog |
 |--------:|------:|-------:|-------:|----------:|----------:|----------:|
@@ -174,7 +174,7 @@ This query mostly throws away its input, and then just counts up what remains. H
 collections
     .lineitems()
     .inner
-    .flat_map(|(x, time, diff)| 
+    .flat_map(|(x, time, diff)|
         if create_date(1994, 1, 1) <= x.ship_date && x.ship_date < create_date(1995, 1, 1) && 5 <= x.discount && x.discount < 7 && x.quantity < 24 {
             Some(((), time, (x.extended_price * x.discount / 100) * diff as i64)).into_iter()
         }
@@ -222,7 +222,7 @@ collections
     .count()
 ```
 
-This is a total sane query, but it doesn't exploit some sweet structure we have: the keys for each of the `count` calls are themselves unsigned integers. Rather than hashing these integers all over the place (which is how we work with generic keys) we can use a special form of `count` which operates on unsigned integer keys: `count_u`. 
+This is a total sane query, but it doesn't exploit some sweet structure we have: the keys for each of the `count` calls are themselves unsigned integers. Rather than hashing these integers all over the place (which is how we work with generic keys) we can use a special form of `count` which operates on unsigned integer keys: `count_u`.
 
 |         |  1,000 | 10,000 | 100,000| 1,000,000 | peak rate |   hot dog |
 |---------|-------:|-------:|-------:|----------:|----------:|----------:|
@@ -236,7 +236,7 @@ This is a decent improvement, and it applies pretty broadly. To be honest, I did
 Query 4 does a few things, but from our point of view it (i) filters about half of the `lineitems` away, and then (ii) calls `distinct` on the remaining `order_key` fields in evidence. Roughly, we need to filter down orders by those with a line item entry violating a delivery commitment; about half of the line item records violate their delivery commitment, so perhaps we shouldn't try too hard to emulate this particular firm.
 
 ```rust
-let lineitems = 
+let lineitems =
 collections
     .lineitems()
     .flat_map(|l| if l.commit_date < l.receipt_date { Some(l.order_key).into_iter() } else { None.into_iter() })
@@ -244,7 +244,7 @@ collections
 
 collections
     .orders()
-    .flat_map(|o| 
+    .flat_map(|o|
         if o.order_date >= create_date(1993, 7, 1) && o.order_date < create_date(1993, 10, 1) {
             Some((o.order_key, o.order_priority)).into_iter()
         }
@@ -278,7 +278,7 @@ fn distinct(&self) -> Collection<G, K, isize> {
 And here is the `semijoin` implementation (apologies for the unclear generic parameters):
 
 ```rust
-fn semijoin<R2: Diff>(&self, other: &Collection<G, K, R2>) -> Collection<G, (K, V), <R as Mul<R2>>::Output> 
+fn semijoin<R2: Diff>(&self, other: &Collection<G, K, R2>) -> Collection<G, (K, V), <R as Mul<R2>>::Output>
 where R: Mul<R2>, <R as Mul<R2>>::Output: Diff {
     let arranged1 = self.arrange_by_key_hashed();
     let arranged2 = other.arrange_by_self();
@@ -286,7 +286,7 @@ where R: Mul<R2>, <R as Mul<R2>>::Output: Diff {
 }
 ```
 
-All we need to do is stitch these together by hand, removing the `as_collection()` call from `distinct` and the `arrange_by_self()` call from `semijoin`. And add a bunch of `use` statements for all the traits that aren't normally exposed. 
+All we need to do is stitch these together by hand, removing the `as_collection()` call from `distinct` and the `arrange_by_self()` call from `semijoin`. And add a bunch of `use` statements for all the traits that aren't normally exposed.
 
 ---
 
@@ -428,9 +428,9 @@ Better still, the underlying shared collection traces are organized by the same 
 
 #### [Query 11](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query11.rs)
 
-This is another neat query, in the spirit of query 15. Rather than extract the suppliers with maximum revenue, the query asks for those parts whose total value (cost times quantity) is some non-trivial fraction of the total value (for suppliers in some given nation). 
+This is another neat query, in the spirit of query 15. Rather than extract the suppliers with maximum revenue, the query asks for those parts whose total value (cost times quantity) is some non-trivial fraction of the total value (for suppliers in some given nation).
 
-This is a bit like the maximum, in that we want only the most significant folks, but we need to use a function of the total as the threshold, rather than the maximum. If we tried the approach up above, we would need to scan through all records just to get the total. 
+This is a bit like the maximum, in that we want only the most significant folks, but we need to use a function of the total as the threshold, rather than the maximum. If we tried the approach up above, we would need to scan through all records just to get the total.
 
 At the same time, we can compute and maintain the total relatively efficiently not using a `group`, just by using `count` with the value stashed in the count field. How can we combine the efficiently maintained count information with the constituent contributions? The only technique that leaps to mind is `join`, which matches each contribution up with the total, which we can then filter down. This has the defect that whenever the total changes we must re-consider each of the contributions, and imagine that most of them are still as useless as ever.
 
@@ -505,7 +505,7 @@ There are a bunch of interesting bits in here. Many computations get no better w
 
 How do things look as we add more workers. Or, in this case, as we add one more worker! Several computations, in particular those with global aggregation, aren't going to gain a lot from a second worker. Differential dataflow doesn't currently have anything in place for pre-aggregation, though it fits perfectly well (we just need to lie about the need for partitioning the data). We currently avoid pre-aggregation because we would like to keep the per-key state linear in the number of keys, rather than keys times workers; if the user wants to opt out of this, super! We should let them.
 
-To take an example, query 15 initially has a global aggregation to determine the maximum. This puts all of the work on one worker. As we introduced the hierarchical aggregation, with the goal of improving the incremental udpate times, we also introduce the opportunity for concurrent work due to the multiple keys involved.
+To take an example, query 15 initially has a global aggregation to determine the maximum. This puts all of the work on one worker. As we introduced the hierarchical aggregation, with the goal of improving the incremental update times, we also introduce the opportunity for concurrent work due to the multiple keys involved.
 
 |          | 100000 x 1 | 100000 x 1 -w2 | peak rate | improvement |
 |---------:|-----------:|---------------:|----------:|------------:|
