--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -46,7 +46,7 @@ You can go and run this! It is essentially the [`degrees.rs`](https://github.com
     observed: ((19, 2), (Root, 0), 1)
     observed: ((20, 1), (Root, 0), 1)
     round 0 finished after Duration { secs: 1, nanos: 120217518 } (loading)
-    Echidnatron% 
+    Echidnatron%
 
 About 1.2 seconds, to produce a bunch of records of the form `(degree, count)` which are pretty plausible. With one million nodes and five million edges we expect on average five out-going edges, and that is roughly what we see.
 
@@ -56,7 +56,7 @@ We've just processed five million edges in a little over a second, which is plau
         Finished release [optimized + debuginfo] target(s) in 0.0 secs
         Running `target/release/examples/degrees 10000000 50000000 0`
     round 0 finished after Duration { secs: 12, nanos: 315594487 } (loading)
-    Echidnatron% 
+    Echidnatron%
 
 Now we are doing 50 million edges in twelve-ish seconds, which is just over four million edges per second throughput, but the latency is now up at twelve seconds which is not anything we are meant to be impressed by. As your pile of input data get larger and larger, the amount of time you should expect a computation to take should only increase, and your delight at watching largely the same computation run over and over should decrease proportionately.
 
@@ -203,7 +203,7 @@ We can vary the batch size a lot, but let's take it all the way up to a crazy le
     round 100000000 finished after Duration { secs: 89, nanos: 69803469 }
     round 150000000 finished after Duration { secs: 91, nanos: 617039787 }
     ^C
-    Echidnatron% 
+    Echidnatron%
 
 Well each of these rounds takes a while. They settle down to around 90 seconds, which for fifty million updates sure is a lot more than the ten seconds it takes to start thing up. Or, the throughput is much lower than four million updates per second, which is what we announced when loading the data; it looks like maybe half a million updates per second (50M / 90s).
 
@@ -231,7 +231,7 @@ Let's plot these numbers. There are a few ways to look at it, but I like the thr
 
 ![lt-large](https://github.com/frankmcsherry/blog/blob/master/assets/latency/lt-large.png)
 
-Of course, this line doesn't go up and to the right forever. To prove this point let's take a much smaller example, a graph with ten nodes and fifty edges. 
+Of course, this line doesn't go up and to the right forever. To prove this point let's take a much smaller example, a graph with ten nodes and fifty edges.
 
 | batch size | latency  (s) | throughput (elts/s) |
 |-----------:|-------------:|--------------------:|
@@ -254,9 +254,9 @@ Yes, these numbers look different. Although they are all better in absolute term
 
 ### Evaluating trade-offs
 
-One thing I like about thinking of the latency-throughput trade-off is that it helps me to better understand the implications of some possible optimizations, or a change in the system configuration. 
+One thing I like about thinking of the latency-throughput trade-off is that it helps me to better understand the implications of some possible optimizations, or a change in the system configuration.
 
-For example, if we add more workers, do we expect the latency (and throughput) to improve, or just the throughput? Often this sort of scaling is evaluated in fixed "weak" and "strong" scaling experiments, where the load is either increased proportional to the workers, or not increased at all. The results reveal whether the system handles more load, or even handles the same load but faster. These are interesting for sure, but I think we can learn even more by looking at the change in the latency-throughput curves. 
+For example, if we add more workers, do we expect the latency (and throughput) to improve, or just the throughput? Often this sort of scaling is evaluated in fixed "weak" and "strong" scaling experiments, where the load is either increased proportional to the workers, or not increased at all. The results reveal whether the system handles more load, or even handles the same load but faster. These are interesting for sure, but I think we can learn even more by looking at the change in the latency-throughput curves.
 
 Let's look at the latency-throughput curves for multiple workers on our 10 million node, 50 million edge computation. The solid line with circles is one worker, the dashed line with squares is two workers.
 
@@ -331,7 +331,7 @@ I was recently reading a slide deck from Azul ([presented here](https://www.yout
 
 The self-regulation of a closed-loop harness can cause it to take fewer measurements in periods of poor latency.
 
-The example Azul gave, which made this super clear for me, is: imagine a system that for the first half of every second responds to requests in one millisecond. For the second half of every second it enqueues the request, doing something like garbage collection or the like. 
+The example Azul gave, which made this super clear for me, is: imagine a system that for the first half of every second responds to requests in one millisecond. For the second half of every second it enqueues the request, doing something like garbage collection or the like.
 
 1. A closed-loop harness, which issues one request (or a batch) and then awaits the response before issuing the next, will see some 500 measurements of "one millisecond" and one measurement of "500 milliseconds". If you plot that distribution, it looks great. There is a tail, but hey its reality and real measurements have tails.
 
@@ -436,7 +436,7 @@ The problem was, it *maintains* this lower envelope after each call to `update`.
 
 ---
 
-Now, this is wrong. The updating shouldn't have to take quadratic time, because we only need the invariant to be correct *after* we have applied all of the updates. So, I went and touched some code that hadn't been touch in years, and switched all of the interfaces from single element updates, to batch iterator updates. 
+Now, this is wrong. The updating shouldn't have to take quadratic time, because we only need the invariant to be correct *after* we have applied all of the updates. So, I went and touched some code that hadn't been touch in years, and switched all of the interfaces from single element updates, to batch iterator updates.
 
 We are now measuring some new code. This correction has the potential to improve even the single-threaded case, as whenever we dip off for one of those several hundred millisecond breaks in the 99th percentile tail, the next thing we are going to do is drop in several thousand records. They get batched somewhat, but this could actually improve the behavior of the system even for one worker:
 
@@ -448,7 +448,7 @@ We are now measuring some new code. This correction has the potential to improve
 |   400,000/s | 203,661,730ns |	  566,640,573ns | 1,560,094,012ns |
 |   500,000/s | 561,085,336ns |	2,601,315,288ns | 2,687,729,288ns |
 
-It does. At least, the median latencies are all down. The 99th and max aren't much changed, but I think they are mostly artifacts of the state compaction logic, rather than overhead in progress tracking. 
+It does. At least, the median latencies are all down. The 99th and max aren't much changed, but I think they are mostly artifacts of the state compaction logic, rather than overhead in progress tracking.
 
 What about for multiple workers? That seems to have been fixed as well. Holding the offered load fixed as we increase the workers, we see general reductions in the median latency, with a bit of a mixed bag up at the 99th percentile and beyond.
 
@@ -460,4 +460,4 @@ What about for multiple workers? That seems to have been fixed as well. Holding 
 |   400,000/s |  22,654,736ns |	2,020,938,633ns	| 2,108,488,633ns |
 |   500,000/s |  94,732,829ns |	1,342,960,963ns | 1,429,652,963ns |
 
-I think these numbers are pretty interesting, especially near the median latency where we observe a 10x drop through the doubling of workers. The tail latencies are less amazing, and seem like a great thing to try and reign in. I have some theories about where the time goes (or rather, what blocks the completion), and it is neat to have a better measurement framework in which to evaluate potenial changes.
+I think these numbers are pretty interesting, especially near the median latency where we observe a 10x drop through the doubling of workers. The tail latencies are less amazing, and seem like a great thing to try and reign in. I have some theories about where the time goes (or rather, what blocks the completion), and it is neat to have a better measurement framework in which to evaluate potential changes.
