--- a/posts/2017-07-27.md
+++ b/posts/2017-07-27.md
@@ -2,11 +2,11 @@
 
 In this post we are going to talk about something that lies at the core of most performance issues in big data systems. Not only am I going to claim that Rust makes your life better than whatever JVM stack you were using before, we are actually going to try and go *beyond* what Rust does for you, playing catch-up with some research systems in the area.
 
-Are you ready for excitement? Let's talk about managing memory. 
+Are you ready for excitement? Let's talk about managing memory.
 
-This is probably the moment where you sigh, tricked, as if this were some "Seven Hadoop performance secrets Oracle doesn't want you to know" post. I certainly remember back when I couldn't imagine anything less exciting, especially since "memory management" was almost always the reason my otherwise well-considered program went slow as sap. 
+This is probably the moment where you sigh, tricked, as if this were some "Seven Hadoop performance secrets Oracle doesn't want you to know" post. I certainly remember back when I couldn't imagine anything less exciting, especially since "memory management" was almost always the reason my otherwise well-considered program went slow as sap.
 
-More recently, I've taken an interest in understand how computers work and whether I can bend them to my will. Can I make the computer do the thing I'm pretty sure it should be able to do, independent of whichever screw-head wrote the layer of code I have to write against. "Managed languages" and Rust are on opposite ends of the spectrum here, with the former building up lots of infrastructure to "help" but which often unintentionally "sucks". The latter, Rust, does a pretty solid job of getting out of your way, but of course provides some default behavior when you need it. 
+More recently, I've taken an interest in understand how computers work and whether I can bend them to my will. Can I make the computer do the thing I'm pretty sure it should be able to do, independent of whichever screw-head wrote the layer of code I have to write against. "Managed languages" and Rust are on opposite ends of the spectrum here, with the former building up lots of infrastructure to "help" but which often unintentionally "sucks". The latter, Rust, does a pretty solid job of getting out of your way, but of course provides some default behavior when you need it.
 
 It's going to be pretty good default behavior, but we are going to try something more awesomer.
 
@@ -66,7 +66,7 @@ Tracing garbage collectors are accurate (if you can reach something, best to kee
 
 Awkwardly, most big data computations are defined by .. having lots of data. And not just briefly having lots of data. Any interesting stream processing system works by maintaining a large amount of historical state that it regularly consults and updates based on the data moving past it. Such a system does not regularly flush out its state, unless it has run out of memory and is now crashing (my current theory: "fault-tolerance" in systems built on managed languages is just a super-primitive form of garbage collection; prove me wrong).
 
-When we build Naiad many years back, while we got our system up and running surprisingly quickly (I was surprised, anyhow), we then spent forever-and-a-half optimizing the performance, and there was a great deal about changing our system and programs so that the garbage collector wouldn't have a fit. For example, if you used `String` anywhere in your program, meaning we maintain a large indexed collection of `String`s for you, the C# garbage collector would vanish for seconds at a time (once: 39 seconds) trying to recall just which of the gigabytes of allocations were still live. 
+When we build Naiad many years back, while we got our system up and running surprisingly quickly (I was surprised, anyhow), we then spent forever-and-a-half optimizing the performance, and there was a great deal about changing our system and programs so that the garbage collector wouldn't have a fit. For example, if you used `String` anywhere in your program, meaning we maintain a large indexed collection of `String`s for you, the C# garbage collector would vanish for seconds at a time (once: 39 seconds) trying to recall just which of the gigabytes of allocations were still live.
 
 Of course, garbage collectors are always getting better, is something you often hear from people who make garbage collectors for a living. Another thing we heard (from the C# performance team) was "if your program's allocations aren't 90% garbage, you might want to rethink your program". Some rethinking happened; they were right about that.*
 
@@ -76,7 +76,7 @@ Anyhow, I don't know which GC is currently the best, and it may be that in the p
 
 ### Ownership and big data
 
-Rust has a different approach to memory management, in that one of its defining features is that it provides automatic memory management without a tracing garbage collector. Automatic memory management just means that you don't need to manually allocate and free things, but as we will see it doesn't mean "all the properties of a tracing garbage collector", for better or for worse. 
+Rust has a different approach to memory management, in that one of its defining features is that it provides automatic memory management without a tracing garbage collector. Automatic memory management just means that you don't need to manually allocate and free things, but as we will see it doesn't mean "all the properties of a tracing garbage collector", for better or for worse.
 
 In Rust, all bindings (of data to a variable or field) are uniquely owned, in the sense that whenever that binding goes away (e.g. when overwritten, when the containing scope ends, etc) we know that there are no other owners of the data, and we can (and should!) clean up it and any of its resources. Like, right away! We don't have to wait to scan the heap or whatever it is the tracing garbage collectors do.
 
@@ -84,7 +84,7 @@ Consider our `log` type up above. When we construct a new one (which is what the
 
 There are a bunch of issues with this approach, most prominently that if we want a copy of the data for some reason, maybe to hand to another bit of code without giving up our copy, we would need to clone the data. That means another ten new allocations, assuming we stick to the discipline that whenever you discard a `Log` you should de-allocate what memory it owns.
 
-Rust has various solutions for this problem, including reference counting (`Rc` and `Arc`) which allow shared ownership, as well as "borrowing" (the `&` and `&mut` sigils) which is Rust's way of saying "you can see / use my copy, but give it back when done, rather than de-allocating it, please". 
+Rust has various solutions for this problem, including reference counting (`Rc` and `Arc`) which allow shared ownership, as well as "borrowing" (the `&` and `&mut` sigils) which is Rust's way of saying "you can see / use my copy, but give it back when done, rather than de-allocating it, please".
 
 Borrowing is the sort of thing that stresses out many folks new to Rust, mostly (I believe) because they haven't had to think about it before. If you aren't familiar, it boils down to grabbing a raw pointer and convincing the compiler that the referrent will be stable for at least as long as your pointer is around. The "convincing" part is what is stressful, but if you get it right then your program can share out references to the existing allocation and not continually re-/de-allocate memory as it does.
 
@@ -117,15 +117,15 @@ From [Abomonation](https://github.com/frankmcsherry/abomonation)'s [`serde` benc
 
     test result: ok. 0 passed; 0 failed; 0 ignored; 3 measured; 0 filtered out
 
-    Echidnatron% 
+    Echidnatron%
 
 Serializing a `Log` to existing memory is about five times faster than allocating a new one.
 
-How could this possibly be? Don't we need to end up with the same thing that `new()` gives us, and if so how could bypassing the language's prefered mechanisms possibly be better? The answer lies in borrowing, and our implicit (now explicit, sorry) willingness to work only with borrowed data.
+How could this possibly be? Don't we need to end up with the same thing that `new()` gives us, and if so how could bypassing the language's preferred mechanisms possibly be better? The answer lies in borrowing, and our implicit (now explicit, sorry) willingness to work only with borrowed data.
 
 Restricting ourselves to work only with borrowed data imposes limitations. We essentially get read-only access to the data, which means we can't take our `Log` and rewrite the `hostname` field. And if we want an owned copy of the `hostname` field to stash somewhere else we will need to clone it. But, the system wasn't planning on handing out ownership of the record fields anyhow; we were going to have to clone things if we wanted that. But this way, we don't have to clone things if we don't need an owned version.
 
-Let's imagine for now that we are comfortable with using borrowed data, or at least defering `clone` and any allocations until we actually need owned data. What does a serialization library like [Abomonation](https://github.com/frankmcsherry/abomonation) do under the hood? Let's look at the `encode` and `decode` method signatures first:
+Let's imagine for now that we are comfortable with using borrowed data, or at least deferring `clone` and any allocations until we actually need owned data. What does a serialization library like [Abomonation](https://github.com/frankmcsherry/abomonation) do under the hood? Let's look at the `encode` and `decode` method signatures first:
 
 ```rust
 unsafe fn encode<T: Abomonation>(typed: &T, bytes: &mut Vec<u8>);
@@ -200,7 +200,7 @@ fn log_encode(b: &mut Bencher) {
 }
 ```
 
-and 
+and
 
 ```rust
 #[bench]
@@ -265,7 +265,7 @@ fn log_decode_assert(b: &mut Bencher) {
 }
 ```
 
-This code does a fair bit more work than `decode`, in that in addition to fixing up pointers it actually examines the serialized text (`decode` doesn't touch the text; just the pointers to it). 
+This code does a fair bit more work than `decode`, in that in addition to fixing up pointers it actually examines the serialized text (`decode` doesn't touch the text; just the pointers to it).
 
     test log_decode_assert ... bench:         106 ns/iter (+/- 24) = 4943 MB/s
 
@@ -278,13 +278,13 @@ What about a more interesting operation, a data shuffle? We'll just take a seque
     test log_shuffle_raw            ... bench:  61,937,093 ns/iter (+/- 6,782,729) = 8460 MB/s
     test log_shuffle_serialized     ... bench: 166,930,100 ns/iter (+/- 22,544,995) = 3139 MB/s
 
-This looks pretty great for the raw representation, which only needs about 61ns per element. What is going on is that we only shuffled the struct data, not the pointers, which are happily sitting wherever they were in memory before we started. This *transfers* ownership, meaning that access to the original copy is lost. To get owned copies we would need to call `clone()` as we go, doing some allocations and slowing things down a bit. 
+This looks pretty great for the raw representation, which only needs about 61ns per element. What is going on is that we only shuffled the struct data, not the pointers, which are happily sitting wherever they were in memory before we started. This *transfers* ownership, meaning that access to the original copy is lost. To get owned copies we would need to call `clone()` as we go, doing some allocations and slowing things down a bit.
 
     test log_shuffle_raw_clone      ... bench: 1,046,903,138 ns/iter (+/- 246,788,658) = 500 MB/s
 
 That's a bit different. The previous version was really just `memcpy`ing 288 byte regions around (the struct itself) and now that it has to (i) chat with the allocator and (ii) actually look at the allocated data (which post-shuffles is scattered all over memory), well it takes more time, doesn't it?
 
-The serialized version up above is naively going from a decoded `&Log` and just encoding it, without exploiting the fact that the data are serialized in the first place (and we could have just copied all the bytes). It is worth understanding how we perform even when not in that setting, because we may often get references without direct access to information about the serialized size (e.g. a field in a `&Log`). Also, the length of the serialized data is not written down anywhere; we discover it indirectly in the deserialization process. 
+The serialized version up above is naively going from a decoded `&Log` and just encoding it, without exploiting the fact that the data are serialized in the first place (and we could have just copied all the bytes). It is worth understanding how we perform even when not in that setting, because we may often get references without direct access to information about the serialized size (e.g. a field in a `&Log`). Also, the length of the serialized data is not written down anywhere; we discover it indirectly in the deserialization process.
 
 For the sake of experiment, we could mock this up as deserializing each element to discover its length, then ignoring everything about the result other than the number of bytes read, and just copying those bytes over without using `encode`. Actually, that should work fine any time we start with serialized data, it's just a bit grotty.
 
@@ -292,7 +292,7 @@ For the sake of experiment, we could mock this up as deserializing each element 
 
 This is still about twice as slow as just moving the 288 bytes of the struct around, which makes sense as the serialized representation is 524 bytes, about twice as long. However, if we aren't able to take ownership of the original allocations, the serialized forms are substantially faster than invoking `clone()` and working with any non-region type of allocator.
 
-#### Comments 
+#### Comments
 
 I'm pretty keen to try out serialized representations for internal differential dataflow data structures. Right now, even just using simple types like `String`, you see a lot of time spent chatting with the allocator, getting new allocations and releasing old allocations. When you do something complicated like merge a few GB of immutable owned data, you end up doing all sorts of clones, and you'd really rather not.
 
