--- a/posts/2017-08-21.md
+++ b/posts/2017-08-21.md
@@ -37,7 +37,7 @@ We are going to implement this computation in [timely dataflow](https://github.c
 
 Timely dataflow is a computational framework where you write programs that act on collections of timestamped datastreams. What does this mean? Rather than imperatively dictate what must happen in which order, you describe computation that can respond to newly arrived timestamped data.
 
-For example, we are going to need to respond to a stream of edge changes in a graph. In timely dataflow we might model that as a stream of `((usize, usize), i64)` data, representing an edge (the source and destination) as well as a signed integer for how the edge changed (+1 for "arrived" and -1 for "departed"). 
+For example, we are going to need to respond to a stream of edge changes in a graph. In timely dataflow we might model that as a stream of `((usize, usize), i64)` data, representing an edge (the source and destination) as well as a signed integer for how the edge changed (+1 for "arrived" and -1 for "departed").
 
 These changes are presented to our computation as a stream, but where the data have timestamps. Each batch of edge changes has a logical "time" that is free to mean many things; in our case it will correspond with "round of applying that rule up there about surfers". If some edge changes arrive with timestamp 100, that means "as part of the 100th iteration, apply these edge changes". You can also *not* have edge changes for some round, which will allow the algorithm to do a round of computation in peace; this is how computations on static datasets usually go.
 
@@ -127,11 +127,11 @@ The `usize::max_value()` and `1` parameters to `loop_variable` indicate the uppe
 
 So now we've come to the hard part. We need to figure out what to do with a stream of timestamped edge changes, and a stream of timestamped rank changes. We can put off the complicated logic for just a moment, and build the skeleton of the `bump` dataflow operator first.
 
-The edge changes flowing around will have type `((usize, usize), i64)` and the rank changes will have type `(usize, i64)`. The first `usize` field in each of these indicates the source node. The `i64` in each indicate the amount of change. 
+The edge changes flowing around will have type `((usize, usize), i64)` and the rank changes will have type `(usize, i64)`. The first `usize` field in each of these indicates the source node. The `i64` in each indicate the amount of change.
 
 Because we may be running with multiple workers, we'll want to shuffle each stream so that changes to the same source arrive at the same worker. To shuffle data between workers we could use the `exchange` operator. It doesn't change the logical contents of the stream, but it does move the records between workers based on a supplied function (from record to integer; we would just pick out the first field). Another way to exchange data is, as part of building a new operator we can specify how its inputs must be shuffled for the operator to be correct. We are going to do that instead.
 
-Our plan is to build a binary operator, taking both `edge_stream` and `rank_stream` as input. I'm going to blat down the skeleton of such an operator now, using one of timely dataflow's generic binary operators, `binary_frontier`.
+Our plan is to build a binary operator, taking both `edge_stream` and `rank_stream` as input. I'm going to beat down the skeleton of such an operator now, using one of timely dataflow's generic binary operators, `binary_frontier`.
 
 ```rust
 worker.dataflow(|scope| {
@@ -144,7 +144,7 @@ worker.dataflow(|scope| {
 
     // bring edges and ranks together!
     let changes = edge_stream.binary_frontier(
-        &rank_stream, 
+        &rank_stream,
         Exchange::new(|x: &((usize, usize), i64)| (x.0).0 as u64),
         Exchange::new(|x: &(usize, i64)| x.0 as u64),
         "PageRank",
@@ -181,7 +181,7 @@ Let's map out what our initialization closure looks like, as it isn't too compli
         let mut edges = Vec::new();
         let mut ranks = Vec::new();
         let mut delta = Vec::new();
-        
+
         move |input1, input2, output| {
             // TODO: actual operator logic here.
         }
@@ -291,7 +291,7 @@ There is similar code for `rank_changes`. The only substantive difference is tha
         compact(&mut edges[src]);
 ```
 
-we have 
+we have
 
 ```rust
         // 2. update ranks.
@@ -300,7 +300,7 @@ we have
 
 In both cases, we determine the previous distribution of rank and the new distribution of rank. We cancel these against each other as appropriate, and then transmit any changes as output. Those changes are what will come back around next iteration, and lead to more work.
 
-That's all of the dataflow construction. The program is ready to go. 
+That's all of the dataflow construction. The program is ready to go.
 
 ### Execution
 
@@ -323,9 +323,9 @@ Our harness above feeds in three edges and then removes one. I've added some rep
     Duration { secs: 0, nanos: 727150 }:    (Root, 48)     1    1       1
     Duration { secs: 0, nanos: 736664 }:    (Root, 101)    1    6890    6890
     Duration { secs: 0, nanos: 742801 }:    (Root, 102)    1    5742    5742
-    Echidnatron% 
+    Echidnatron%
 
-What we see here are some pretty standard reduction in the amount of error (about a factor of 0.85) each iteration, until the 48th iteration, at which point the error finally vanishes. 
+What we see here are some pretty standard reduction in the amount of error (about a factor of 0.85) each iteration, until the 48th iteration, at which point the error finally vanishes.
 
 The only work remaining in the system is that edge change at round 100, and timely correctly reports to the operator that there will be nothing else received before it. We pick up that change, removing the `(2, 1)` edge, and in just two iterations of changes all is settled again (node two decrements rank headed for node one, who informs node two, who is no longer connected to node one).
 
@@ -335,7 +335,7 @@ To get a sense of scale, `1_000` new surfers are introduced at each page each ro
 
 There is a pretty gross performance bug (or three) in the operator implementation above, so we aren't going to do epic scale graphs. Instead, let's look at a computation that loads up 10m edges on 1m nodes and runs that until it stabilizes.
 
-    Echidnatron% cargo run --release --example pagerank -- 1000000 10000000 
+    Echidnatron% cargo run --release --example pagerank -- 1000000 10000000
         Finished release [optimized] target(s) in 0.0 secs
         Running `target/release/examples/pagerank 1000000 10000000`
     Duration { secs: 12, nanos: 209272888 }:    (Root, 1)    999951    833440369    2730
@@ -355,7 +355,7 @@ There is a pretty gross performance bug (or three) in the operator implementatio
     Duration { secs: 56, nanos: 638983100 }:    (Root, 90)   65        72           2
     Duration { secs: 56, nanos: 639020015 }:    (Root, 91)   32        36           2
     Duration { secs: 56, nanos: 639047710 }:    (Root, 92)   4         5            2
-    Echidnatron% 
+    Echidnatron%
 
 We see a pretty steady decline from a very large amount of error, down to by round 30 relatively small error (I just 20 to be relatively small to 1,000). Pretty soon thereafter, we are stable.
 
@@ -388,7 +388,7 @@ Much later on, in terms of rounds but not seconds (0.372s), we finish (after 100
     Duration { secs: 56, nanos: 654068593 }:    (Root, 1998)    12      15      2
     Duration { secs: 56, nanos: 654091300 }:    (Root, 1999)    27      29      2
     Duration { secs: 56, nanos: 654113077 }:    (Root, 2000)    27      30      2
-    Echidnatron% 
+    Echidnatron%
 
 This leads us to our final experiment: starting up the computation as before, but immediately changing edges every iteration and not stopping. Well, not for 1,000 rounds anyhow.
 
@@ -431,13 +431,13 @@ It would take just a few rounds, and fractions of a second, to sort out the chan
     Duration { secs: 72, nanos: 889600198 }:    (Root, 1005)    4356    4827    3
     ...
     Duration { secs: 72, nanos: 901214500 }:    (Root, 1031)    12      13      2
-    Echidnatron% 
+    Echidnatron%
 
 It takes another thirty rounds and thirty milliseconds to settle the remaining few thousand errors, even though the maximum drops almost immediately. In this case, we can think of thirty milliseconds as the "exposure" in terms of how long you'd need to get a 100% solid answer.
 
 ### Backwards Error Analysis
 
-For interested persons, there is actually a pretty decent interpretation of the error at any point. It turns out that at all times, the ranks we currently have are actually the *correct* answer for the slightly changed input problem. The current ranks are the correct answer to the computation where the initial conditions (the `1_000` surfers at each page) are tweaked by the outstanding changes in rank for each page. 
+For interested persons, there is actually a pretty decent interpretation of the error at any point. It turns out that at all times, the ranks we currently have are actually the *correct* answer for the slightly changed input problem. The current ranks are the correct answer to the computation where the initial conditions (the `1_000` surfers at each page) are tweaked by the outstanding changes in rank for each page.
 
 When we tracked the number of changes, their sum, and their maximum, this was to get a sense for how much we would have to change our source distribution of surfers to be "correct". When these numbers are small, like `6` just above, it means that we have found the solution to a version of the same problem where everyone's initial surfer counts lie in `[994, 1006]`, which isn't what we asked for but is pretty close.
 
@@ -489,7 +489,7 @@ fn allocate(rank: i64, edges: &[(usize, i64)], send: &mut Vec<(usize, i64)>) {
 
 This method is what *I think* one wants to distribute `rank` uniformly among the positive entries of `edges` (which we imagine have count one despite being `i64`). We first figure out how much rank we will actually distribute versus stash locally (`distribute`), and we hand out roughly `distribute / degree` to each neighbor. We bump this up for a few nodes so that the total is actually `distribute`, to make sure we aren't losing mass.
 
-By distributing exactly `distibute`, we are sure that if someone changes `rank` by `diff`, then we distribute changes of at most `diff`, and probably more like `5 * diff / 6`. Of course, when `diff` is small (like `+/-1`) we probably end up distributing exactly `diff` in changes.
+By distributing exactly `distribute`, we are sure that if someone changes `rank` by `diff`, then we distribute changes of at most `diff`, and probably more like `5 * diff / 6`. Of course, when `diff` is small (like `+/-1`) we probably end up distributing exactly `diff` in changes.
 
 Why would this converge? What causes small changes to stop circulating?
 
