--- a/posts/2017-10-23.md
+++ b/posts/2017-10-23.md
@@ -1,6 +1,6 @@
 ## Differential Dataflow! But at what COST?
 
-Way back when, in the course of thinking out loud about the performance improvements differential dataflow could use, [I proposed](https://github.com/frankmcsherry/blog/blob/master/posts/2017-03-28.md#next-steps-cost) that I would write up a single-threaded implementation of "differential" breadth-first search, to try and see how much overhead the differential dataflow framework introduces. 
+Way back when, in the course of thinking out loud about the performance improvements differential dataflow could use, [I proposed](https://github.com/frankmcsherry/blog/blob/master/posts/2017-03-28.md#next-steps-cost) that I would write up a single-threaded implementation of "differential" breadth-first search, to try and see how much overhead the differential dataflow framework introduces.
 
 That attempt failed, because I couldn't figure out how to do it correctly without re-using lots of the internals of differential dataflow.
 
@@ -12,7 +12,7 @@ Let's start with a statement of the problem.
 
 ---
 
-We are going to compute and maintain a breadth-first distance labeling of the nodes of a directed graph, from node zero, as the graph experiences various additions and removals of edges. 
+We are going to compute and maintain a breadth-first distance labeling of the nodes of a directed graph, from node zero, as the graph experiences various additions and removals of edges.
 
 ---
 
@@ -92,9 +92,9 @@ Let's start with the differential dataflow computation. Because differential dat
 
 ```rust
 fn bfs<G: Scope>(
-    edges: &Collection<G, Edge>, 
+    edges: &Collection<G, Edge>,
     roots: &Collection<G, Node>) -> Collection<G, (Node, u32)>
-where G::Timestamp: Lattice+Ord 
+where G::Timestamp: Lattice+Ord
 {
     roots.map(|x| (x, 0))
          .iterate(|inner|
@@ -161,7 +161,7 @@ First let's notice that there is only one row; the program as implemented must b
 
 As a sanity check, the numbers of changes propagated is 16,789,289 for the `small` graph and 13,303,160 for the `large` graph. This means something like 334ns and 550ns for each change propagated, respectively. Much of this time goes in to sorting the new changes in each round, essentially routing the information about changes to the affected node (the time for the small graph increases by an alarming 2s if we switch in Rust's new `sort_unstable_by` quicksorting routine; the large graph time is unaffected in either direction). It isn't clear that our times are the best one could achieve, and I have to admit to trying less hard than I have for other COST evaluations; in part, this is a weirder problem and we are already in the hundreds of lines of code.
 
-If we take the best measurements for each graph from up above, differential dataflow with one worker is slower than the bespoke implementation by a factor of 5.67x for the `small` graph and a factor of 2.76x for the `large` graph. This isn't scalability information just yet, so we can't make any clever comments about the COST, which asks for the configuration that outperforms the single threaded implemention. We probably are going to need at least 5.67 and 2.76 workers (rounded up) to compete, but it could actually be lots worse than this.
+If we take the best measurements for each graph from up above, differential dataflow with one worker is slower than the bespoke implementation by a factor of 5.67x for the `small` graph and a factor of 2.76x for the `large` graph. This isn't scalability information just yet, so we can't make any clever comments about the COST, which asks for the configuration that outperforms the single threaded implementation. We probably are going to need at least 5.67 and 2.76 workers (rounded up) to compete, but it could actually be lots worse than this.
 
 Before going too far into scalability land, let's talk about what we are actually computing, how the differential dataflow bfs computation actually does more than it needs to do to solve this specific problem. This will reduce the factors to about 4.00x and 1.83x for `small` and `large` respectively, at the cost of reducing the generality of the computation.
 
@@ -177,9 +177,9 @@ We can do this trick with differential dataflow as well, though I am going to ch
 
 ```rust
 fn reachable<G: Scope>(
-    edges: &Collection<G, Edge>, 
+    edges: &Collection<G, Edge>,
     roots: &Collection<G, Node>) -> Collection<G, Node>
-where G::Timestamp: Lattice+Ord 
+where G::Timestamp: Lattice+Ord
 {
     roots.iterate(|inner|
         edges.enter(&inner.scope())
@@ -210,11 +210,11 @@ Importantly, we still do *have* all of this data, because the histories do need 
 
 #### Ignoring prior and subsequent computation
 
-Our differential dataflow implementation starts by loading the initial graph edges (either 2k or 10m edges), then doing various rounds of computation, and finally calling it quits and terminating. This means that at each of these points, just after loading, between each round, and just before terminating, the system needs to have a representation of its history that supports arbitrary future changes. 
+Our differential dataflow implementation starts by loading the initial graph edges (either 2k or 10m edges), then doing various rounds of computation, and finally calling it quits and terminating. This means that at each of these points, just after loading, between each round, and just before terminating, the system needs to have a representation of its history that supports arbitrary future changes.
 
 The COST implementation requires none of this, as it does a single batch of work, and so can perform all of its updates in-place.
 
-We can do the same thing in differential dataflow, though effecting it is a bit indirect and a bit subtle. 
+We can do the same thing in differential dataflow, though effecting it is a bit indirect and a bit subtle.
 
 First, we can remove the distinctions between each of the batches by using the `1000000 x 1` configuration, which hasn't always been the best performer but that is about to change. This removes any dependence on batching structure, so we will only have one measurement rather than a spread.
 
@@ -262,7 +262,7 @@ I'm going to run the same optimized implementation where we use `distinct` and d
 
 At 7.82 seconds, we are *just* over the 7.34s time for the `large` graph, and we are still just over 2x larger than the 5.61s time for the `small` graph, and within 2x of the time if we had used `sort_unstable` in our single-threaded implementation.
 
-The next step is to take this to a machine with more cores. I made one tweak, which is to start the differential dataflow timer after the random graph data were generated (which has been the case for the bespoke measurements, but which hadn't been the case in the differential implementations until just now, because it was written to generate the changes on the fly). 
+The next step is to take this to a machine with more cores. I made one tweak, which is to start the differential dataflow timer after the random graph data were generated (which has been the case for the bespoke measurements, but which hadn't been the case in the differential implementations until just now, because it was written to generate the changes on the fly).
 
 |   workstation | cores |  small |  large |
 |--------------:|------:|-------:|-------:|
