--- a/posts/2017-12-10.md
+++ b/posts/2017-12-10.md
@@ -12,7 +12,7 @@ Also, the descriptions of the problems are linked for each day, and they are rat
 
 ### Index
 
-Some quick random access to various days. Also, check out [the solution repository](https://github.com/frankmcsherry/differential-dataflow/tree/master/advent_of_code_2017/src/bin). 
+Some quick random access to various days. Also, check out [the solution repository](https://github.com/frankmcsherry/differential-dataflow/tree/master/advent_of_code_2017/src/bin).
 
 [Day 01: Matching up elements in a sequence.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-01)
 
@@ -172,7 +172,7 @@ I've represented the input as a collection of triples `(val, row, col)`, much li
         .inspect(|elt| println!("part {} checksum: {:?}", elt.0, elt.2));
 ```
 
-Among the values in each row, the first part of the problem wants the difference between the maximum and minimum values, and the second part wants the ratio of the (guaranteed) two elements one of which cleanly divides the other. The two lines 
+Among the values in each row, the first part of the problem wants the difference between the maximum and minimum values, and the second part wants the ratio of the (guaranteed) two elements one of which cleanly divides the other. The two lines
 
 ```rust
             output.push((1, (max - min)));
@@ -187,7 +187,7 @@ The short version of this is that `consolidate` keeps very little state and resp
 
 ### [Day 03](https://adventofcode.com/2017/day/3)
 
-Day 03 is a bit of a chaotic mess. The intent is that you start on the integer grid at (0, 0), and start spiralling outwards (right first, then up and around counter-clockwise). As you go, you determine a value for each new location as a function of the values of the surrounding cell (those whose values have been set). For the first part, your function is `max + 1`, essentially counting up by one. For the secord part, your function is the sum of the set values.
+Day 03 is a bit of a chaotic mess. The intent is that you start on the integer grid at (0, 0), and start spiraling outwards (right first, then up and around counter-clockwise). As you go, you determine a value for each new location as a function of the values of the surrounding cell (those whose values have been set). For the first part, your function is `max + 1`, essentially counting up by one. For the second part, your function is the sum of the set values.
 
 I've implemented this as an iterative process, where each cell advertises its value to each of its eight neighbors, but these advertisements result in a set value only when they contain an advertisement for the predecessor cell in the sequence. This is a bit like how you might write [Conway's Game of Life](https://en.wikipedia.org/wiki/Conway's_Game_of_Life) in differential dataflow, another fun exercise. As it turns out, the sequencing means there isn't much parallelism here, but it works out (if slowly).
 
@@ -250,7 +250,7 @@ We could also do it hierarchically, by computing the sums for *ranges* of `xi` t
     ..
     y(0,i) = xi
 
-The next level would add up `y` terms from 
+The next level would add up `y` terms from
 
     y(1,0) = y(0,0) + y(0,1)
     y(1,2) = y(0,2) + y(0,3)
@@ -274,7 +274,7 @@ There are several potential gotchas here, like that multiple `<` symbols still o
 
 What we *could* do is try and cast this as a parallel prefix sum problem. The way I've done this (there are others) is to start with the problem of determining whether characters should be ignored, and whether they are garbage (rules 1 and 2 above). We will deal with the nesting depth later.
 
-I assert that there are essentially four states that the parser has with respect to ignores and garbage, and they are a cross product of "ignore the next character or not" and "in a garbage scope or not". I'm going to encode these as 
+I assert that there are essentially four states that the parser has with respect to ignores and garbage, and they are a cross product of "ignore the next character or not" and "in a garbage scope or not". I'm going to encode these as
 
     0:  don't ignore the next character, not garbage either.
     1:  don't ignore the next character, but in garbage scope.
@@ -286,7 +286,7 @@ Each of the characters represent a *transition* from each of the four possible i
 Here are the rules as I think they should be:
 
 ```rust
-    let transitions = 
+    let transitions =
     input
         .map(|(pos, character)|
             (pos, match character {
@@ -337,7 +337,7 @@ where
     let unit_ranges = collection.map(|(index, data)| ((index, 0), data));
 
     unit_ranges
-        .iterate(|ranges| 
+        .iterate(|ranges|
 
             // Each available range, of size less than usize::max_value(), advertises itself as the range
             // twice as large, aligned to integer multiples of its size. Each range, which may contain at
@@ -368,7 +368,7 @@ The second half of the computation is taking all of these aggregates and re-flow
 ```rust
 /// Produces the accumulated values at each of the `usize` locations in `aggregates` (and others).
 fn pp_broadcast<G, D, B, F>(
-    ranges: Collection<G, ((usize, usize), D)>, 
+    ranges: Collection<G, ((usize, usize), D)>,
     seed: B,
     zero: D,
     combine: F) -> Collection<G, (usize, B)>
@@ -388,7 +388,7 @@ where
 
     let aggregates = ranges.concat(&zero_ranges);
 
-    let init_state = 
+    let init_state =
     Some(((0, seed), Default::default(), 1))
         .to_stream(&mut aggregates.scope())
         .as_collection();
@@ -407,7 +407,7 @@ where
 }
 ```
 
-After defining some empty `zero_ranges` that link up the state at the beginning of a parent range to the beginning of its second child, if there was no first child to do so, we whip up some `initial_state` containing the supplied `seed`. I thisk is technically sketchy, as each worker will introduce this seed making its multiplicity high. We eventually hit things with `distinct`, but it could be cleaned up.
+After defining some empty `zero_ranges` that link up the state at the beginning of a parent range to the beginning of its second child, if there was no first child to do so, we whip up some `initial_state` containing the supplied `seed`. I think is technically sketchy, as each worker will introduce this seed making its multiplicity high. We eventually hit things with `distinct`, but it could be cleaned up.
 
 The main hunk of logic is the `iterate`, which repeatedly develops a collection of `(usize, B)` values describing the state at each position. We repeatedly take the state at known positions and apply existing summaries (including the `zero_ranges` summaries of empty ranges) to produce new values at the other end of the ranges. This is going on mostly in the line
 
@@ -467,7 +467,7 @@ Here is a different use case: imagine you are editing a few megabytes of text fo
 
 Fortunately, differential dataflow is magically incremental. All of it. The parallel-prefix computations we did, totally incrementalized.
 
-Differential dataflow will propogate all of the changes in each of the collections we've defined, and that *could mean* lots and lots of changes, which wouldn't go very fast at all. Imagine editing a bunch of text and adding your first `<`, causing all of the rest of the text to turn blue; maybe you don't like that and delete the `<` turning it back from blue. Lots of changes happen, and we can't fix that for you (yet). But, because of the formatting rules, `>` closes a garbage region no matter where it started; changes you make locally may not cascade throughout the file.
+Differential dataflow will propagate all of the changes in each of the collections we've defined, and that *could mean* lots and lots of changes, which wouldn't go very fast at all. Imagine editing a bunch of text and adding your first `<`, causing all of the rest of the text to turn blue; maybe you don't like that and delete the `<` turning it back from blue. Lots of changes happen, and we can't fix that for you (yet). But, because of the formatting rules, `>` closes a garbage region no matter where it started; changes you make locally may not cascade throughout the file.
 
 Let's try. I'm going to start up the computation, and then start making some single character edits, replacing 20 locations with `!` and then putting the original character back. I used locations 1000, 2000, .. up to 20,000, because I have run out of good ideas by this point. I'm also just computing the (ignore, garbage) state, rather than the parens depth nesting.
 
@@ -492,11 +492,11 @@ Let's try. I'm going to start up the computation, and then start making some sin
     Duration { secs: 0, nanos: 165755020 }  changed ('\"')  seen: 20    
     Duration { secs: 0, nanos: 166512474 }  changed ('!')   seen: 4
 
-Each line reports the elapsed time (post dataflow construction, but pre-computation), what happened, and how many changes were observed. You can see a few things here: 
+Each line reports the elapsed time (post dataflow construction, but pre-computation), what happened, and how many changes were observed. You can see a few things here:
 
 1. It takes about 144ms to produce the (ignore, garbage) state for each location, starting from a string of 20k characters. That goes down to 100ms with two threads (yay), but you can't see that here.
 
-2. Once we start doing single character changes, the per-update time drops. It takes about 20ms to do 20 changes, or roughly one millesecond per change on average.
+2. Once we start doing single character changes, the per-update time drops. It takes about 20ms to do 20 changes, or roughly one millisecond per change on average.
 
 3. The smallest change happens when we do two `!` characters in a row, representing zero new changes made and zero old changes reverted. In that case, where the input doesn't change and we just need to verify as much, it takes about 400 microseconds (oof). If we are eating 400us to do nothing, there is probably room to shave off about 400us from each of these numbers (which would be significant!).
 
@@ -530,6 +530,6 @@ fn knot_step<I: Iterator<Item=u8>+Clone>(iter: I, rounds: usize) -> Vec<u8> {
 
 Not everything needs to be dataflow.
 
-In principle you could do this with parallel prefix sum, as each range of `width` values from the iterator can be described by the permutation of `0 .. 256` they induce, using 256 bytes, but the test sequence is only about 40 characters long. 
+In principle you could do this with parallel prefix sum, as each range of `width` values from the iterator can be described by the permutation of `0 .. 256` they induce, using 256 bytes, but the test sequence is only about 40 characters long.
 
 Maybe this can be homework!
