--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -74,7 +74,7 @@ let probe =
 
 This doesn't look like much, and indeed it isn't. It turn out that if you want tumbling window counts it is super easy in differential dataflow, as it reports for each time (here: window) by how much the counts have changed, which is just the sum for the window. If you want to see the results it prints them out for you; it could put them in Redis if you wanted that instead.
 
-Following the recent [Drizzle paper](http://shivaram.org/publications/drizzle-sosp17.pdf) I discarded the first five minutes of measurements and checked out the next five minutes. Every ten seconds I report the throughput as the number of records processed divided by ten, and the latency as the time after the ten seconds ends that timely returns the signal that all of the 100 counts have been correctly determined. This means I have 30 throughput measurements and 30 latency measurments, which are:
+Following the recent [Drizzle paper](http://shivaram.org/publications/drizzle-sosp17.pdf) I discarded the first five minutes of measurements and checked out the next five minutes. Every ten seconds I report the throughput as the number of records processed divided by ten, and the latency as the time after the ten seconds ends that timely returns the signal that all of the 100 counts have been correctly determined. This means I have 30 throughput measurements and 30 latency measurements, which are:
 
 ![Throughput](https://github.com/frankmcsherry/blog/blob/master/assets/ysb/throughput.png)
 
